--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,21 @@
 org.gradle.jvmargs=-Xmx2048M
 
-enabled_platforms=fabric,forge
+enabled_platforms=fabric,neoforge
+maven_group=com.matthewperiut.fence_on_slab
 archives_base_name=fence_on_slab
 mod_version=0.1.0
-maven_group=com.matthewperiut.fence_on_slab
 
 # https://fabricmc.net/develop/ ----
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.2
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
 loader_version=0.15.11
 
 # Fabric API
-fabric_version=0.87.2+1.19.4
+fabric_version=0.97.1+1.20.4
 # -----
 
 # https://files.minecraftforge.net/net/minecraftforge/forge/
-forge_version=1.19.4-45.3.0
+neoforge_version=20.4.237
 
 
 
