--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,21 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.16.5
 enabled_platforms=fabric,forge
-
 archives_base_name=fence_on_slab
 mod_version=0.1.0
 maven_group=com.matthewperiut.fence_on_slab
 
-architectury_version=1.32.68
+# https://fabricmc.net/develop/ ----
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.4
+loader_version=0.15.11
 
-fabric_loader_version=0.14.23
-fabric_api_version=0.42.0+1.16
+# Fabric API
+fabric_version=0.77.0+1.18.2
+# -----
 
-forge_version=1.16.5-36.2.39
+# https://files.minecraftforge.net/net/minecraftforge/forge/
+forge_version=1.18.2-40.2.21
 
 
 
