--- a/gradle.properties
+++ b/gradle.properties
@@ -6,16 +6,16 @@ archives_base_name=fence_on_slab
 mod_version=0.1.0
 
 # https://fabricmc.net/develop/ ----
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.3
+minecraft_version=1.21
+yarn_mappings=1.21+build.2
 loader_version=0.15.11
 
 # Fabric API
-fabric_version=0.100.2+1.20.6
+fabric_version=0.100.3+1.21
 # -----
 
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge_version=20.6.119
+neoforge_version=21.0.21-beta
 
 
 
