--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
 }
 
 architectury {
@@ -23,6 +23,16 @@ subprojects {
     }
 }
 
+def createVersionString() {
+    def builder = new StringBuilder()
+
+    builder.append(mod_version)
+
+    builder.append('+mc').append(minecraft_version)
+
+    return builder.toString()
+}
+
 allprojects {
     apply plugin: "java"
     apply plugin: "architectury-plugin"
@@ -32,7 +42,7 @@ allprojects {
         archivesName = rootProject.archives_base_name
     }
 
-    version = rootProject.mod_version
+    version = createVersionString()
     group = rootProject.maven_group
 
     repositories {
