--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
+base {
+    archivesName = "fence_on_slab-neoforge"
+}
+
 architectury {
     platformSetupLoomIde()
     neoForge()
@@ -72,23 +76,5 @@ sourcesJar {
 components.java {
     withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
         skip()
-    }
-}
-
-publishing {
-    publications {
-        mavenForge(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-" + project.name
-            from components.java
-        }
-    }
-
-    base {
-        archivesName = rootProject.archives_base_name + "-neoforge-" + minecraft_version
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
     }
 }
